@@ -25,6 +25,8 @@
 # pragma once
 #endif /* ACE_LACKS_PRAGMA_ONCE */
 
+#include "ccm/Extension/CCM_ExtensionComponentC.h"
+
 namespace CIAO
 {
   /**
@@ -38,15 +40,16 @@ namespace CIAO
   template <typename BASE_SKEL,
             typename EXEC,
             typename CONTEXT>
-  class Extension_Servant_Impl : public virtual BASE_SKEL,
-                       public virtual CONTEXT::svnt_base_type
+  class Extension_Servant_Impl :
+    public virtual BASE_SKEL,
+    public virtual CONTEXT::svnt_base_type
   {
   public:
     Extension_Servant_Impl (EXEC * exe,
-                  Components::CCMHome_ptr home,
-                  const char * ins_name,
-                  Home_Servant_Impl_Base *home_servant,
-                  ::CIAO::Extension_Container_ptr c);
+                            Components::CCMHome_ptr home,
+                            const char * ins_name,
+                            Home_Servant_Impl_Base *home_servant,
+                            ::CIAO::Extension_Container_ptr c);
 
     virtual ~Extension_Servant_Impl (void);
 
