@@ -1,3 +1,14 @@
+Fri Sep 24 18:08:37 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * ciao/Containers/Extension/Extension_Container.idl:
+        * ciao/Contexts/Extension/Extension_Context_T.h:
+        * ciao/Contexts/Extension/Extension_Context_T.cpp:
+        * ciao/Servants/Extension/Servant_Impl_T.h:
+        * ciao/Servants/Extension/Servant_Impl_T.cpp:
+        * ciao/Servants/Home_Servant_Impl_T.cpp:
+          Another set of changes for extension components, more will follow
+          next week together with some changes to all mpc files
+
 Fri Sep 24 14:14:45 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * ciao/Contexts/Extension/Extension_Context_T.h:
